# vidmation

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_ambient.py  mix_audio.py  pyproject.toml
.github/workflows/: deploy.yml
channel_profiles/: default.yml  podcastclippings.yml  spiritrising.yml
deploy/: aividio-api.service  aividio-web.service  deploy.sh  rollback.sh  vidmation-web.service  vidmation-worker.service
docs/: v0-api-spec.md
frontend/: README.md  next.config.mjs  package-lock 2.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: logo.tsx
frontend/components/dashboard/: sidebar-nav.tsx
frontend/components/landing/: landing-page.tsx
frontend/lib/: api.ts  auth-context.tsx
frontend/scripts/: remove-logo-bg.js
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
frontend/src/hooks/: use-keyboard-shortcut.ts
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/types/: index.ts  wizard.ts
migrations/: env.py
scripts/: assemble_video.py  expand_clips.py
src/aividio/: __init__.py  __main__.py
src/aividio/agent/: __init__.py  config.py  mcp.py  orchestrator.py  prompts.py  registry.py  tools.py
src/aividio/analytics/: __init__.py  reports.py  tracker.py  youtube_analytics.py
src/aividio/api/: __init__.py  auth.py  webhooks.py
src/aividio/audio_first/: __init__.py  pipeline.py  segmenter.py
src/aividio/auth/: __init__.py  dependencies.py  jwt.py  routes.py
src/aividio/batch/: __init__.py  csv_parser.py  generator.py
src/aividio/billing/: __init__.py  plans.py  stripe_service.py
src/aividio/brand/: __init__.py  kit.py  overlays.py  templates.py
src/aividio/captions/: __init__.py  animator.py  effects.py  templates.py
src/aividio/cli/: __init__.py  agent.py  app.py  assets.py  audio.py  batch.py  channel.py  content.py  effects.py  flywheel.py  generate.py  job.py  server.py  theme.py  youtube.py
src/aividio/config/: __init__.py  settings.py
src/aividio/content/: __init__.py  calendar.py  planner.py  series.py
src/aividio/db/: __init__.py  engine.py  repos.py
src/aividio/effects/: __init__.py  emoji_sfx.py  magic_broll.py  magic_clips.py  magic_zoom.py  silence_remover.py
src/aividio/models/: __init__.py  analytics.py  api_key.py  asset.py  channel.py  job.py  notification.py  schedule.py  user.py  video.py  voice.py  webhook.py
src/aividio/notifications/: __init__.py  discord.py  email.py  manager.py  slack.py
src/aividio/pipeline/: __init__.py  context.py  orchestrator.py  stages.py
src/aividio/publishing/: __init__.py  manager.py
src/aividio/queue/: __init__.py  scheduler.py  tasks.py  worker.py
src/aividio/scheduling/: __init__.py  advanced.py
src/aividio/seo/: __init__.py  hashtags.py  optimizer.py
src/aividio/services/: __init__.py  base.py
src/aividio/styles/: __init__.py  registry.py
src/aividio/utils/: __init__.py  ffmpeg.py  files.py  logging.py  retry.py
src/aividio/video/: __init__.py  assembler.py  audio_mixer.py  captions_render.py  formats.py
src/aividio/web/: __init__.py  app.py  templating.py
src/vidmation/: __main__.py
src/vidmation/agent/: __init__.py  config.py  mcp.py  orchestrator.py  prompts.py  registry.py  tools.py
src/vidmation/analytics/: __init__.py  reports.py  tracker.py  youtube_analytics.py
src/vidmation/api/: __init__.py  auth.py  webhooks.py
src/vidmation/audio_first/: __init__.py  pipeline.py  segmenter.py
src/vidmation/auth/: __init__.py  dependencies.py  jwt.py  password.py  rate_limit.py  routes.py  schemas.py
src/vidmation/batch/: __init__.py  csv_parser.py  generator.py
src/vidmation/billing/: __init__.py  plans.py  stripe_service.py
src/vidmation/brand/: __init__.py  kit.py  overlays.py  templates.py
src/vidmation/captions/: __init__.py  animator.py  effects.py  templates.py
src/vidmation/cli/: agent.py  app.py  assets.py  audio.py  batch.py  channel.py  content.py  effects.py  flywheel.py  generate.py  job.py  server.py  theme.py  (+1 more)
tests/: conftest.py
tests/test_cli/: test_cli_help.py
tests/test_pipeline/: test_context.py
tests/test_services/: test_batch_csv.py  test_captions.py  test_config.py  test_repos.py
tests/test_video/: test_formats.py
(+353 files in other folders)
