[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aividio"
version = "0.1.0"
description = "AI-powered faceless YouTube video automation platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Connor O'Dea", email = "connor@quicklotz.com" },
]
keywords = [
    "youtube", "video", "automation", "ai", "faceless",
    "tts", "captions", "ffmpeg", "content-creation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",

    # CLI
    "typer[all]>=0.12",
    "rich>=13.0",

    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",

    # AI / LLM
    "anthropic>=0.40",
    "openai>=1.50",

    # TTS
    "elevenlabs>=1.0",

    # AI Model Platforms
    "replicate>=0.25",
    "fal-client>=0.4",

    # Media
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25",
    "Pillow>=10.0",

    # Speech-to-text (captions)
    "openai-whisper>=20240930",

    # Google / YouTube API
    "google-auth>=2.15",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.1",
    "google-api-python-client>=2.0",

    # HTTP
    "httpx>=0.27",

    # Auth
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "email-validator>=2.0",

    # Billing
    "stripe>=8.0",

    # Database drivers
    "psycopg2-binary>=2.9,<2.10",

    # Utils
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/connorodea/aividio"
Repository = "https://github.com/connorodea/aividio"
Issues = "https://github.com/connorodea/aividio/issues"

[project.optional-dependencies]
redis = ["redis>=5.0", "rq>=1.16"]
dev = ["pytest>=8.0", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
aividio = "aividio.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aividio"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F401", "F841", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
